@@ -1,33 +1,9 @@
+allprojects {
 apply plugin: 'scala'
 apply plugin: 'idea'
-//apply plugin: 'application'
-apply from: 'http://dl.bintray.com/content/shemnon/javafx-gradle/8.1.1/javafx.plugin'
 
 group = "com.github.pintowar"
 version = 0.1
-
-//mainClassName = "brainiak.MainUI"
-
-
-javafx {
-    appID '8-puzzle Brainiak'
-    appName '8-puzzle Brainiak'
-    mainClass = "brainiak.MainUI"
-
-    // JVM arguments, system properties, application command line arguments
-    jvmArgs = ['-XX:+AggressiveOpts', '-XX:CompileThreshold=1']
-    systemProperties = ['prism.disableRegionCaching':'true']
-    arguments = ['-l', '--fast']
-
-    debugKey {
-        alias = 'debugKey'
-        keyPass = project.keyStorePassword
-        keyStore = file("${System.properties['user.home']}/.keys/debug.jks")
-        storePass = project.storePassword
-    }
-
-    signingMode 'debug'
-}
 
 repositories{
     mavenCentral()
@@ -36,8 +12,6 @@ repositories{
 
 dependencies{
     compile "org.scala-lang:scala-library:2.11.2"
-    compile "org.scalafx:scalafx_2.11:8.0.20-R6"
-    compile "com.netflix.rxjava:rxjava-scala:0.20.4"
     testCompile "junit:junit:4.11"
     testCompile "org.scalatest:scalatest_2.11:2.2.3-SNAP1"
 }
@@ -46,3 +20,5 @@ scalaConsole.dependsOn(build)
 scalaConsole.dependsOn(test)
 scalaConsole.classpath += sourceSets.main.output
 scalaTestConsole.classpath += sourceSets.test.output
+
+}
